# eir

./: .gitignore  404.html  Dockerfile  Makefile  README.md  docker-compose.yaml  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
app/: database.py  main.py  models.py  test_main.py
app/auth/: dependencies.py  jwt_handler.py
docs/: index.md
search/: search_index.json
