[project]
name = "eir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "httpx>=0.27.2",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
]
